[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idessem"
dynamic = ["version"]
dependencies = [
    "cfinterface>=1.8.0,<=1.8.3",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
]
requires-python = ">= 3.10"
authors = [
  {name = "Rogerio Alves", email = "rogerioalves.ee@gmail.com"},
  {name = "Mariana Noel", email = "marianasimoesnoel@gmail.com"},
]
description = "Pacote Python para manipulacao dos arquivos de entrada e saida do DESSEM"
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
lint = [
    "mypy",
    "pre-commit",
    "ruff",
]
docs = [
    "matplotlib",
    "numpydoc",
    "plotly",
    "sphinx",
    "sphinx-gallery",
    "furo",
]
dev = [
    "idessem[test,lint,docs]",
]

[project.urls]
Documentation = "https://rjmalves.github.io/idessem/"
Repository = "https://github.com/rjmalves/idessem/"

[tool.hatch.version]
path = "idessem/__init__.py"

[tool.hatch.build.targets.wheel]
include = [
  "idessem/",
]

[tool.mypy]
warn_return_any = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
per-file-ignores = { "examples/*.py" = ["E402"] }
